# paralela_proyecto

./: .dockerignore  .gitignore  CMakeLists.txt  Dataset_1960_2023_sismo.csv  Dataset_sismos.parquet  Dockerfile  app.py  bindings.cpp  blockThreadsv6.py  blockThreadsv7.py  codeoriginalv2.py  comparav4.py  conversor.py  dockerfile  main.cpp  motor_sjoin_ctypes.py  procesador_sjoin.cpp  procesador_sjoin.h  requeriments.txt  requirements.txt
